--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "build": "vite build",
     "preview": "vite preview",
     "format": "prettier --write src/",
-    "server": "json-server --watch src/data/stocksdata.json --port 8000"
+    "server": "json-server --watch public/data/stocksdata.json --port 8000"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.4",
     "axios": "^1.9.0",
     "json-server": "^1.0.0-beta.3",
+    "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
