--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.4",
     "axios": "^1.9.0",
+    "echarts": "^5.6.0",
     "json-server": "^1.0.0-beta.3",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
+    "vue-echarts": "^7.0.3",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
