--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-echarts": "^7.0.3",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-spinner": "^1.0.4",
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
