--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.4",
     "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "echarts": "^5.6.0",
     "json-server": "^1.0.0-beta.3",
     "pinia": "^3.0.2",
